# bank-statement-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  E2E_WORKFLOW_BREAKDOWN.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  bank_profiles.json  bank_profiles.py  json_utils.py  main.py  paths.py  pdf_text_extract.py  settings.py  statement_parser.py
backend/data/: ocr.db
backend/frontend/: package-lock.json  package.json
backend/tests/: conftest.py  test_admin_settings.py  test_balance_validator.py  test_crm_router.py  test_crm_service_fetch_batch.py  test_crm_service_uploaded_status.py  test_document_intake_pipeline.py  test_job_transactions_flags.py  test_jobs_core_flow.py  test_jobs_page_ai_fix.py  test_jobs_raw_results.py  test_jobs_repository.py  test_jobs_row_normalization.py  test_jobs_service_cleaned_pages.py  test_ocr_pipeline_structured_rows.py  test_ocr_router.py  test_parser_pipeline_auto_profile.py  test_pdf_text_extract.py  test_pdftotext_layered_parser.py  test_simple_column_parser_passes.py  test_statement_parser_date_normalization.py  test_statement_parser_header_hint.py  test_summary_metrics.py  test_summary_refresh.py  test_text_pipeline_overlap_dedupe.py  test_volume_router.py
data/: ocr.db
data/config/: bank_profiles.json
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.js
frontend/e2e/: global-setup.ts  (+2 more)
scripts/: migrate.sh  run-api.sh  run-worker.sh
(+117 files in other folders)
