[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-statement-analyzer"
version = "0.1.0"
description = "Bank statement extraction platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.30.6",
  "jinja2==3.1.4",
  "celery==5.4.0",
  "redis==5.0.8",
  "python-multipart==0.0.9",
  "pydantic==2.9.2",
  "sqlalchemy==2.0.34",
  "psycopg[binary]==3.2.1",
  "alembic==1.14.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "httpx==0.27.2",
  "ruff==0.9.6",
  "mypy==1.15.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
